updated the blog html template with quistions

--- a/blog.html
+++ b/blog.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+
 </head>
+
 <body>
-    
+    <section class="w-11/12 mx-auto mt-9 text-center p-6 bg-red-100">
+        <h1 class="font-bold text-4xl py-6 text-emerald-700">Questions</h1>
+        <h2 class="font-bold text-2xl">1. Difference Between map, filter, forEach and find in JavaScript?</h2>
+        <h2 class="text-2xl text-gray-500">Ans</h2>
+
+        <h2 class="font-bold text-2xl mt-9">2. Difference Between Local Storage, Session Storage and Cookies?</h2>
+        <h2 class="text-2xl text-gray-500">Ans</h2>
+
+        <h2 class="font-bold text-2xl mt-9">3. What is Event Loop in JavaScript?</h2>
+        <h2 class="text-2xl text-gray-500">Ans</h2>
+
+        <h2 class="font-bold text-2xl mt-9">4. Describe about <span class="text-orange-600">quizTimer()</span> Function used in noChange.js</h2>
+        <h2 class="text-2xl text-gray-500">Ans</h2>
+
+        <h2 class="font-bold text-2xl mt-9">4. Describe about <span class="text-orange-600">chooseQuiz()</span> Function used in noChange.js</h2>
+        <h2 class="text-2xl text-gray-500">Ans</h2>
+    </section>
+
 </body>
+
 </html>
