updated the blog html ans for map filter find forEach function

--- a/blog.html
+++ b/blog.html
@@ -14,20 +14,34 @@
     <section class="w-11/12 mx-auto mt-9 text-center p-6 bg-red-100">
         <h1 class="font-bold text-4xl py-6 text-emerald-700">Questions</h1>
         <h2 class="font-bold text-2xl">1. Difference Between map, filter, forEach and find in JavaScript?</h2>
-        <h2 class="text-2xl text-gray-500">Ans</h2>
+        <h2 class="text-2xl text-gray-500"><span class="font-bold">Map:</span> It creates a new array by applying a function to each element in an
+            existing array. The original array is not modified.
+
+            <br><br><span class="font-bold">Filter: </span>It creates a new array with all elements that pass the test implemented by a provided function. The
+            original array is not modified.
+
+            <br><br><span class="font-bold">forEach: </span> It executes a provided function once for each array element. It does not return a new array and does
+            not modify the original array.
+
+            <br><br><span class="font-bold">Find: </span>It returns the value of the first element in an array that satisfies a provided function. It returns
+            undefined if no such element is found.</h2>
 
         <h2 class="font-bold text-2xl mt-9">2. Difference Between Local Storage, Session Storage and Cookies?</h2>
-        <h2 class="text-2xl text-gray-500"><span class="font-bold">Local storage:</span> It stores data on the client side and has a larger storage
+        <h2 class="text-2xl text-gray-500"><span class="font-bold">Local storage:</span> It stores data on the client
+            side and has a larger storage
             capacity than session storage or cookies. Data persists beyond the current session and can be accessed by
             any page within the same domain.
 
-            <br><br><span class="font-bold">Session storage:</span> It also stores data on the client side, but data is only accessible during the current
+            <br><br><span class="font-bold">Session storage:</span> It also stores data on the client side, but data is
+            only accessible during the current
             session and is deleted when the session ends. Data is not shared between different tabs or windows of the
             same domain.
 
-            <br><br><span class="font-bold">Cookies: </span>It can store data on the client or server side and have a limit of 4 KB per cookie and 300 cookies per
+            <br><br><span class="font-bold">Cookies: </span>It can store data on the client or server side and have a
+            limit of 4 KB per cookie and 300 cookies per
             domain. They can be accessed by multiple pages and sessions and can be set to expire at a specific time.
-            They are less secure than local storage and session storage.</h2>
+            They are less secure than local storage and session storage.
+        </h2>
 
         <h2 class="font-bold text-2xl mt-9">3. What is Event Loop in JavaScript?</h2>
         <h2 class="text-2xl text-gray-500">The event loop is a fundamental concept in JavaScript that ensures
